<resources>
    <string name="app_name">e-Vaseis</string>

    <!-- Dashboard Bottom Nav Menu-->
    <string name="basesTitle">Bases</string>
    <string name="topicTitle">Topics</string>
    <string name="calculatorTitle">Calculator</string>
    <string name="accountTitle">Account</string>

    <!-- Personalization -->
    <string name="proceed_button">Proceed</string>

    <!-- Language Fragment -->
    <string name="language_title">Language</string>
    <string name="language_subtitle">Select app language.\nSome texts will always display on Greek</string>
    <string name="language_english" translatable="false">English</string>
    <string name="language_greek" translatable="false">Ελληνικά</string>
    <string name="language_system_default">System Default</string>

    <!-- UserType Fragment -->
    <string name="user_type_title">User type</string>
    <string name="user_type_subtitle">Ποια κατηγορία πανελληνίων σας ενδιαφέρει; \n
        You can change your choice later into app.</string>

    <!-- Exam Type Fragment -->
    <string name="category_title">Category</string>
    <string name="category_subtitle">Ποια κατηγορία πανελληνίων σας ενδιαφέρει; \n
        You can change your choice later into app.</string>

    <!-- CalculatorGroup Fragment -->
    <string name="group_title">Group</string>
    <string name="group_subtitle">Select your group</string>

    <!-- Theme Fragment -->
    <string name="theme_title">Theme</string>
    <string name="theme_subtitle">Choose your favourite theme for app.</string>
    <string name="theme_dark">Dark</string>
    <string name="theme_light">Light</string>
    <string name="theme_default">System Default</string>


    <!-- TopicsModule Fragment -->
    <string name="topics_title">Past\nExams\n</string>
    <string name="topics_pdf_no_open">Unable to find application to open PDF file.</string>

    <!-- Account -->
    <string name="account_account_title">Account</string>
    <string name="account_exam_type_name">Category</string>
    <string name="account_user_type">User Type</string>
    <string name="account_group_type">Group Type</string>
    <string name="account_user_type_student">Student</string>
    <string name="account_user_type_teacher">Teacher</string>
    <string name="account_system">System</string>
    <string name="account_theme">Theme</string>
    <string name="account_theme_dark">Dark</string>
    <string name="account_theme_light">Light</string>
    <string name="account_language">Language</string>
    <string name="account_language_english">English</string>
    <string name="account_language_greek">Greek</string>
    <string name="account_feedback">Feedback</string>
    <string name="account_rate">Rate us</string>
    <string name="account_share">Share with my friends</string>
    <string name="account_bug">I spotted a Bug</string>
    <string name="account_credits">Credits</string>
    <string name="account_about_app">About the App</string>
    <string name="account_about_api">About the API</string>
    <string name="account_special_thanks">Special Thanks</string>

    <!-- Calculator Fragment -->
    <string name="calculator_degree_title">Degree</string>

    <string name="department_more_stats">Statistics by year   </string>

    <!-- Bases Fragment -->
    <string name="filter_fab">Filters</string>
    <string name="base_filter_from">Degree from:</string>
    <string name="base_filter_to">To:</string>
    <string name="enable_department_only">Show disable departments</string>
    <string name="order_alphabetic">Alphabetic</string>
    <string name="order_university">By University</string>
    <string name="order_decreasing">Decreasing degree</string>
    <string name="bases_first_degree" translatable="false">μόρια\n%1$s</string>
    <string name="bases_first_degree_label" translatable="false">καλύτερη επίδοση</string>
    <string name="bases_total_candidates_label" translatable="false">συνολική συμμετοχή</string>
    <string name="bases_university_label" translatable="false">ίδρυμα</string>
    <string name="bases_fields_label">πεδία</string>
    <string name="bases_city_label" translatable="false">πόλη</string>
    <string name="bases_university_format" translatable="false">%1$s, %2$s</string>
    <string name="bases_university_select_all" translatable="false">Επιλογή όλων</string>
    <string name="bases_university_count">%1$s departments </string>
    <string name="bases_university_search_hint">search...</string>
    <string name="bases_candidates_label">Προτιμήσεις υποψηφίων</string>
    <string name="bases_candidates_sub_label">Πρώτες 3 θέσεις</string>
    <string name="bases_filter_universities_count" translatable="false">(%1$s)</string>
    <string name="bases_filter_universities_chip" translatable="false">Ιδρύματα (%1$s)</string>
    <string name="bases_filter_fields" translatable="false">Επιστημονικά Πεδία</string>

    <plurals name="bases_filter_universities_chip">
        <item quantity="one">Ίδρυμα (%1$s)</item>
        <item quantity="other">Ιδρύματα (%1$s)</item>
    </plurals>

    <plurals name="bases_candidate">
        <item quantity="one">%d\ncandidate</item>
        <item quantity="other">%d\ncandidates</item>
    </plurals>

    <plurals name="bases_candidate_label">
        <item quantity="one">δήλωσε στις πρώτες 3 θέσεις του μηχανογρφικού τους αυτό το τμήμα για το %1$s</item>
        <item quantity="other">δήλωσαν στις πρώτες 3 θέσεις του μηχανογρφικού τους αυτό το τμήμα για το %1$s</item>
    </plurals>


</resources>