<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/backgroundColor">

    <include
        android:id="@+id/back_button_layout"
        layout="@layout/layout_back_button" />

    <TextView
        android:id="@+id/themeTitleTextView"
        style="@style/personalizationTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/theme_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/themeSubTitleTextView"
        style="@style/personalizationSubtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/theme_subtitle"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/themeTitleTextView" />

    <RadioGroup
        android:id="@+id/theme_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/themeSubTitleTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <RadioButton
            android:id="@+id/default_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/theme_default"/>

        <RadioButton
            android:id="@+id/light_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/theme_light"/>

        <RadioButton
            android:id="@+id/dark_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/theme_dark"/>
    </RadioGroup>

    <Button
        android:id="@+id/proceedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/proceed_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.7" />

</androidx.constraintlayout.widget.ConstraintLayout>