<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/backgroundColor">

    <include
        android:id="@+id/back_button_layout"
        layout="@layout/layout_back_button" />

    <TextView
        android:id="@+id/userTypeTitleTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/personalizationTitle"
        android:text="@string/user_type_title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/userTypeSubtitleTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/personalizationSubtitle"
        android:text="@string/user_type_subtitle"
        app:layout_constraintTop_toBottomOf="@id/userTypeTitleTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/proceedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/personalizationProceedButton"
        android:text="@string/proceed_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.7" />

</androidx.constraintlayout.widget.ConstraintLayout>